--- a/assets/css/Ecomaxstylecss.css
+++ b/assets/css/Ecomaxstylecss.css
@@ -2668,7 +2668,7 @@ body {
         font-size: 20px !important;
         line-height: 30px !important;
     }
-    .PRODUCT-OVERVIEW p{
+    .PRODUCT-OVERVIEW ul li{
         line-height: 21px !important;
         font-size: 14px !important;
         margin-bottom: 30px !important;
@@ -4548,7 +4548,7 @@ body {
     flex-direction: column;
     gap: 20px;
 }
-.PRODUCT-OVERVIEW p {
+.PRODUCT-OVERVIEW ul li {
     font-weight: 400;
     line-height: 24px;
     color: #414141;
