--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,7 +309,9 @@ a {
 .message_field {
     height: 464px !important;
 }
-
+.uppercase-text {
+    text-transform: uppercase;
+}
 .heading_description {
     font-size: var(--small-font);
     font-weight: var(--regular-font);
