--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -390,6 +390,19 @@ a {
     justify-content: end;
 }
 
+.industrial-border ul li {
+    border: 1px solid white;
+    background-color:  #1E5F28;
+    height: 40px;
+}
+
+.industrial-border h5{
+    border: 1px solid white;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    background-color: #0D4315;
+}
 /* ------------- Ecomax Section ------------- */
 .wcu_section,
 .connect-section {
@@ -2051,6 +2064,9 @@ body {
 }
 
 @media(max-width:575px) {
+    .swiper-horizontal>.swiper-pagination-bullets.swiper-pagination-bullets-dynamic, .swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic{
+      
+    }
     .Lubricants-products {
         justify-content: center !important;
         margin-top: 30px !important;
@@ -2065,7 +2081,9 @@ body {
     .count-card {
         width: 47%;
     }
-
+    .industrial-border ul li {
+        height: 30px ;
+    }
     .Revitalize-card {
         width: 100% !important;
     }
@@ -3026,7 +3044,7 @@ body {
         display: flex;
         justify-content: center;
     }
-
+   
     .menej-box {
         width: 581px;
     }
@@ -3481,7 +3499,7 @@ body {
     .image_with_form_container {
         margin-top: 50px !important;
     }
-
+   
     .hero-lg-image img {
         height: 720px;
         object-fit: cover;
@@ -3621,6 +3639,9 @@ body {
         left: 85%;
     }
 }
+.list-none{
+    list-style: none;
+}
 
 @media(min-width:1200px) {
     .section-padding {
@@ -3648,6 +3669,7 @@ body {
         gap: 20px;
         flex-direction: column;
     }
+ 
 
     .About-img img {
         width: 100%;
@@ -3855,10 +3877,10 @@ body {
         height: 35px !important;
     }
     .TECHNICAL-SPECIFICATIONS{
-        height: 452px !important;
+        height: 560px !important;
     }
     .TECHNICAL-SPECIFICATIONS::after{
-        height: 452px !important;
+        height: 560px !important;
     }
     .PROPERTY-TESTMETHOD-RESULT{
         width: 800px !important;
@@ -4039,12 +4061,6 @@ body {
     .TECHNICAL-SPECIFICATIONS-Result{
         margin-top: 100px !important;
         margin-bottom: 100px !important;
-    }
-    .TECHNICAL-SPECIFICATIONS{
-        height: 560px !important;
-    }
-    .TECHNICAL-SPECIFICATIONS::after{
-        height: 560px !important;
     }
     
 }
@@ -4575,7 +4591,7 @@ tbody tr td span {
 
 .industrial-slaid{
     padding-top: 25px !important;
-    width: 230px !important;
+
     height: 320px !important;
 }
 .industrial_slaider_item ul{
