--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,7 +490,36 @@ a {
     word-wrap: break-word;
     word-break: break-all;
 }
+.loader-section {
+    text-align: center;
+    opacity: 0;
+    transition: all 0.5s ease-in;
+  }
+  .contact-form-section.active .loader-section {
+    opacity: 1;
+  }
+  .contact-form-section.active #detaform {
+    display: none;
+  }
+  .loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #FFF;
+  border-bottom-color: #FF3D00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  }
 
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+  } 
 /* footer section */
 .footer_inner {
     background-image: url('../images/footer/footermask-green.png'), url('../images/footer/footer-mask.png');
