--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -505,7 +505,7 @@ a {
   width: 48px;
   height: 48px;
   border: 5px solid #FFF;
-  border-bottom-color: #FF3D00;
+  border-bottom-color:#1e5f28;
   border-radius: 50%;
   display: inline-block;
   box-sizing: border-box;
