--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1300,11 +1300,11 @@ body {
 
 /* About-us */
 .About-text .about-title {
-    padding-left: 14px;
+    padding-left: 18px;
 }
 
 .about-sab {
-    gap: 20px;
+    gap: 21px;
     flex-direction: column;
 }
 
@@ -1347,13 +1347,19 @@ body {
     width: 28px;
     height: 28px;
 }
-
+.Vision_text{
+    color: #414141;
+    margin: 0;
+    line-height: 24px;
+    font-weight: 400;
+}
 .About-title h1 {
     font-weight: 600;
     font-size: 36px;
     line-height: 54px;
     color: var(--text-color);
     margin-bottom: 0px;
+    margin-top: 1px;
 }
 
 .About-des {
@@ -1859,6 +1865,8 @@ body {
     margin-top: 30px;
     font-weight: 400;
     line-height: 24px;
+    color: #414141;
+    font-size: 16px;
 }
 
 .Global-Excellence-sab {
@@ -1899,7 +1907,10 @@ body {
 .cout {
     border-radius: 10px;
 }
+.Global_Excellence_box{
+    border-radius: 10px;
 
+}
 .cout5 {
     width: 45% !important;
 }
@@ -1977,14 +1988,21 @@ body {
     z-index: 1;
     position: relative;
 }
-
+.carousel-control-next, .carousel-control-prev{
+    width: 85px;
+}
 .list-group-laine {
     border-top: 1px solid var(--neon-color);
 }
-
+.dropdown:hover .dropdown-menu{
+    display: block;
+}
 .footer-link-icon {
     font-size: 22px;
     color: var(--neon-color);
+}
+.dropdown-menu-products li {
+    list-style: none;
 }
 
 .footer::after {
@@ -2431,7 +2449,12 @@ body {
         border-radius: 10px;
         height: 145px;
     }
-
+    .Global_Excellence_box{
+        font-size: 16px !important;
+        width: 100%;
+        border-radius: 10px;
+        height: 145px;
+    }
     .numeric {
         padding-top: 40px;
         padding-bottom: 40px;
@@ -3410,6 +3433,10 @@ body {
         height: 261px !important;
         z-index: 10;
         width: 342px;
+    }
+    .Global_Excellence_box{
+        z-index: 10;
+        width: 343px;
         height: 181px;
     }
 
@@ -4066,7 +4093,10 @@ body {
     }
 
     .about-description p {
-        font-size: 17px;
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: 400;
+        color: #414141;
     }
 
     .benefit-icon {
@@ -4218,7 +4248,7 @@ body {
     }
 
     .Global-Excellence-title-main {
-        padding-right: 141px;
+        padding-right: 154px;
     }
 
     .benefit-wrap {
