--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -414,7 +414,7 @@ a {
 
 .industrial-border ul li {
     border: 1px solid rgba(255, 255, 255, 0.268);
-    background-color: #009846;
+    background-color: #006A31;
 
 }
 
@@ -439,7 +439,7 @@ a {
     font-size: 20px;
     font-weight: 400;
     line-height: 30px;
-    background-color: #007436;
+    background-color: #005A2A;
 }
 
 .industrial_wh h5,
@@ -544,13 +544,30 @@ a {
 
 /* footer section */
 .footer_inner {
-    background-image: url('../images/footer_oer.png'), url('../images/footer/footer-mask.png');
+    background-image: url('../images/footer/footer-mask.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     padding: 100px 0;
+    width: 100%;
+    background-position: bottom;
+    align-items: center;
+    z-index: 1;
+    position: relative;
 }
-
+.footer_inner::after{
+    align-items: center;
+    background-size: cover;
+    position: absolute;
+    content: '';
+    background-color:  #009846;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 65%;
+}
 .copy-right-footer {
     background-color: #00642E;
     padding: 10px 0;
@@ -948,6 +965,7 @@ a {
     }
 }
 
+
 @media only screen and (max-width: 320px) {
 
 
@@ -960,7 +978,7 @@ a {
         font-size: 30px;
         max-width: 288px;
     }
-
+   
 
 
     .heading_container {
@@ -3019,7 +3037,7 @@ body {
     .has-blank {
         display: none !important;
     }
-
+    
 }
 
 @media(min-width:576px) {
@@ -4585,7 +4603,7 @@ body {
         height: 720px;
         object-fit: cover;
     }
-
+    
     .top-bar-lg {
         padding-top: 8px;
     }
