--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -6032,3 +6032,56 @@ tbody tr td span {
     border: none;
     line-height: 33px;
 }
+#chartdiv {
+    width: 100%;
+    height: 600px
+  }
+  .map-section {
+    padding-bottom: 100px;
+  }
+  .am5-layer-30 {
+    display: none;
+  }
+  g[aria-labelledby="id-72-title"] {
+    display: none;
+  }
+  @media (max-width:768px) {
+    h2.title-contact {
+      font-size: 26px;
+      line-height: normal;
+    }
+    #chartdiv {
+      width: 100%;
+      height: 250px;
+    }
+  }
+  .loader-section {
+  text-align: center;
+  opacity: 0;
+  transition: all 0.5s ease-in;
+}
+.contact-form-section.active .loader-section {
+  opacity: 1;
+}
+.contact-form-section.active #detaform {
+  display: none;
+}
+.loader {
+width: 48px;
+height: 48px;
+border: 5px solid #FFF;
+border-bottom-color:#1e5f28;
+border-radius: 50%;
+display: inline-block;
+box-sizing: border-box;
+animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+0% {
+    transform: rotate(0deg);
+}
+100% {
+    transform: rotate(360deg);
+}
+} 
