--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -544,7 +544,7 @@ a {
 
 /* footer section */
 .footer_inner {
-    background-image: url('../images/footer/footer-mask.png');
+    background-image: url('../images/footer/footer.webp');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -1582,7 +1582,7 @@ body {
 
 /* benefit */
 .benefit {
-    background-image: url('../images/home/1ec68b5abe8305e0a800b77561d2922d.png');
+    background-image: url('../images/home/1ec68b5abe8305e0a800b77561d2922d.webp');
     background-size: cover;
     width: 100%;
     height: 438px;
