--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -542,7 +542,7 @@ a {
 
 /* footer section */
 .footer_inner {
-    background-image: url('../images/footer/footer.webp');
+    background-image: url('../images/footer/footer.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
