--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5288,7 +5288,7 @@ body {
         margin-bottom: 50px !important;
     }
 
-    .swiper-wrapper {
+    .product_img {
         margin-top: 59px !important;
     }
 
