--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5806,7 +5806,7 @@ body {
 /* industrial hero End */
 /* TECHNICAL SPECIFICATIONS Start */
 .TECHNICAL-SPECIFICATIONS {
-    background-image: url('../images/home/1ec68b5abe8305e0a800b77561d2922d.png');
+    background-image: url('../images/home/1ec68b5abe8305e0a800b77561d2922d.webp');
     background-size: cover;
     width: 100%;
     height: 560px;
